--- a/web/index.html
+++ b/web/index.html
@@ -55,7 +55,7 @@
 									<input type="radio" id="mp3-option-0" name="selector-0" tabindex="1" checked>
 									<span>audio</span>
 								</label>
-								<label id="label-mp4-0" for="mp4-option-0" class="l-radio">
+								<label id="label-mp4-0" for="mp4-option-0" class="l-radio l-radio2">
 									<input type="radio" id="mp4-option-0" name="selector-0" tabindex="2">
 									<span>audio & video</span>
 								</label>
