--- a/web/index.html
+++ b/web/index.html
@@ -51,11 +51,11 @@
 							</div>
 
 							<div id="radio-buttons-0">
-								<label id="label-mp3-0" for="mp3-option-0" class="l-radio">
+								<label id="label-mp3-0" title=".mp3" for="mp3-option-0" class="l-radio">
 									<input type="radio" id="mp3-option-0" name="selector-0" tabindex="1" checked>
 									<span>audio</span>
 								</label>
-								<label id="label-mp4-0" for="mp4-option-0" class="l-radio l-radio2">
+								<label id="label-mp4-0" title=".mp4" for="mp4-option-0" class="l-radio l-radio2">
 									<input type="radio" id="mp4-option-0" name="selector-0" tabindex="2">
 									<span>audio & video</span>
 								</label>
@@ -66,7 +66,8 @@
 					</div>
 
 					<div class="add-url-container">
-						<span class="add-url-btn" onclick="createUrlField()">add URL</span>
+						<span class="add-url-btn" title="Add another URL field" onclick="createUrlField()">add
+							URL</span>
 					</div>
 
 					<div id="validation-warning" class="alert alert-warning" role="alert">
@@ -96,11 +97,11 @@
 
 					<div class="text-center p-t-115">
 						<span class="txt1">
-							made in Rio Maior, Portugal.
+							made in Serradinha, Rio Maior, Portugal.
 							<br />
 							<span style="font-weight: bold">by:
 								<a href="https://ivolopes-developer.github.io/MyResume/" target="_blank">Ivo
-									Lopes</a></span>
+									Lopes Developer</a></span>
 						</span>
 					</div>
 				</form>
